homeassistant/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: production
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`ha.staging.imranr.dev`)
      kind: Rule
      middlewares:
        - name: forwardauth-geoblock
          namespace: production
      services:
        - name: homeassistant
          port: 8123
  tls:
    secretName: imranr-dev-tls
